[package]
name = "gust_lfs_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0.69"
axum = { version = "0.6.16", features = ["multipart"] }
bytes = "1.4.0"
dotenvy = "0.15.6"
futures-util = "0.3.28"
sea-orm = { version = "0.11.2", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sha256 = "1.1.3"
tracing = "0.1"
tower-http = { version = "0.4.0", features = ["full"] }
rand = "0.8.5"
time = { version = "0.3.21", features = ["serde", "serde-well-known", "serde-human-readable"] }
time-macros = "0.2.9"
chrono = "0.4.24"
